# llm-from-scratch

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
notebooks/: chapter_2.ipynb  chapter_2.py  chapter_3.ipynb  chapter_3.py
src/: download_text.py  main.py  simple_tokenizer.py
