[project]
name = "projects"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.13.4",
    "notebook>=7.4.2",
    "numpy>=2.2.4",
    "ruff>=0.11.8",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
